remove dist from git

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "crons": [
         {
-            "path": "./dist/binance/index.js",
-            "schedule": "* */12 * * *"
+            "path": "/dist/binance/index.js",
+            "schedule": "0 7 * * *"
         }
     ]
 }
