--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
-    "name": "manage-salary-cronjobs",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "tsc"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "axios": "^1.4.0",
-        "crypto": "^1.0.1",
-        "dotenv": "^16.0.3"
-    },
-    "devDependencies": {
-        "@types/node": "^20.2.3",
-        "@typescript-eslint/eslint-plugin": "^5.59.7",
-        "eslint": "^8.0.1",
-        "eslint-plugin-import": "^2.25.2",
-        "eslint-plugin-n": "^15.0.0",
-        "eslint-plugin-promise": "^6.0.0",
-        "typescript": "*"
-    }
+  "name": "cron",
+  "repository": "https://github.com/vercel/examples.git",
+  "license": "MIT",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@vercel/analytics": "^0.1.11",
+    "@vercel/examples-ui": "^1.0.5",
+    "@vercel/kv": "^0.2.1",
+    "axios": "^1.4.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
+    "ms": "^2.1.3",
+    "next": "canary",
+    "react": "latest",
+    "react-dom": "latest",
+    "swr": "^2.1.0"
+  },
+  "devDependencies": {
+    "@types/ms": "^0.7.31",
+    "@types/node": "^17.0.45",
+    "@types/react": "18.0.27",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.36.0",
+    "eslint-config-next": "canary",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
+    "turbo": "^1.8.3",
+    "typescript": "4.9.5"
+  }
 }
