--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# Dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# Testing
-/coverage
-
-# Next.js
-/.next/
-/out/
-
-# Production
-/build
-
-# Misc
-.DS_Store
-*.pem
-
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Local ENV files
+node_modules
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Vercel
+dist
 .vercel
-
-# Turborepo
-.turbo
-
-# typescript
-*.tsbuildinfo
