--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "tsc"
+        "build": "tsc",
+        "lint": "eslint . --ext .ts"
     },
     "keywords": [],
     "author": "",
@@ -18,10 +19,12 @@
     },
     "devDependencies": {
         "@types/node": "^20.2.3",
-        "@typescript-eslint/eslint-plugin": "^5.59.7",
+        "@typescript-eslint/eslint-plugin": "^5.50.0",
+        "@typescript-eslint/parser": "^6.0.0",
         "eslint": "^8.0.1",
+        "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "^2.25.2",
-        "eslint-plugin-n": "^15.0.0",
+        "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
         "eslint-plugin-promise": "^6.0.0",
         "typescript": "*"
     }
